打包为可依赖的jar包